# expipe-plugin-cinpla

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check_formatting.yml  full_tests.yml  publish-to-pypi.yml
docs/: conf.py
expipe_plugin_cinpla/: __init__.py  axona.py  electrical_stimulation.py  imports.py  intan.py  main.py  openephys.py  plotter.py  signal_tools.py
expipe_plugin_cinpla/cli/: adjust.py  axona.py  curation.py  entity.py  intan.py  main.py  misc.py  openephys.py  psychopy.py  surgery.py
expipe_plugin_cinpla/scripts/: adjust.py  axona.py  config.py  curation.py  entity.py  intan.py  openephys.py  psychopy.py  surgery.py  tracking.py  utils.py
expipe_plugin_cinpla/tools/: action.py  adjust.py  config.py  entity.py  openephys.py  surgery.py
expipe_plugin_cinpla/widgets/: adjust.py  axona.py  browser.py  curation.py  entity.py  intan.py  openephys.py  psychopy.py  surgery.py  tracking.py  utils.py
notebooks/: convert_project.py  expipe-plugin-cinpla-demo.ipynb
src/expipe_plugin_cinpla/: __init__.py  data_loader.py  imports.py  utils.py
src/expipe_plugin_cinpla/cli/: __init__.py  main.py  process.py  register.py  utils.py
src/expipe_plugin_cinpla/nwbutils/: cinplanwbconverter.py  nwbwidgetsunitviewer.py
src/expipe_plugin_cinpla/nwbutils/interfaces/: __init__.py  openephystrackinginterface.py
src/expipe_plugin_cinpla/scripts/: __init__.py  convert_old_project.py  curation.py  data_processing.py  process.py  register.py  unittracking.py  utils.py
src/expipe_plugin_cinpla/tools/: __init__.py  data_loader.py  data_processing.py  plotting_utils.py  project_loader.py  registration.py  track_units_tools.py  trackunitcomparison.py  trackunitmulticomparison.py  utils.py
src/expipe_plugin_cinpla/widgets/: __init__.py  browser.py  curation.py  process.py  register.py  unittracking.py  utils.py  viewer.py
tests/: conftest.py  test_cli.py  test_convert_old_project.py  test_main.py  test_script.py
tests/test_data/: tetrode_32_openephys.json
tests/test_data/axona/: DVH_2013103103.set  DVH_2013103103_2.cut  DVH_2013103103_3.cut  DVH_2013103103_4.cut  DVH_2013103103_8.cut
tests/test_data/intan/test-rat_2017-06-23_11-15-46_1/: experiment1_all_channels_0.events  experiment1_binarymsg_0.eventsbinary
tests/test_data/intan/test-rat_2017-06-23_11-16-45_2/: experiment1_all_channels_0.events  experiment1_binarymsg_0.eventsbinary
tests/test_data/old_project/: expipe.yaml
tests/test_data/old_project/actions/001-181220-2/: attributes.yaml
tests/test_data/old_project/actions/001-181220-2/data/main.exdir/: attributes.yaml
tests/test_data/old_project/actions/001-181220-2/data/main.exdir/acquisition/: attributes.yaml
tests/test_data/old_project/actions/001-181220-2/data/main.exdir/acquisition/2/: settings.xml
tests/test_data/old_project/actions/001-181220-2/data/main.exdir/epochs/: exdir.yaml
tests/test_data/old_project/actions/001-181220-2/data/main.exdir/processing/electrophysiology/: attributes.yaml
tests/test_data/old_project/actions/001-181220-2/modules/: channel_group_location.yaml  depth.yaml
tests/test_data/old_project/actions/001-181220-4/: attributes.yaml
tests/test_data/old_project/actions/001-181220-4/data/main.exdir/: attributes.yaml  exdir.yaml
tests/test_data/old_project/actions/001-181220-4/data/main.exdir/acquisition/: attributes.yaml
tests/test_data/old_project/actions/001-181220-4/data/main.exdir/acquisition/4-clip/: settings.xml
tests/test_data/old_project/actions/001-181220-4/modules/: channel_group_location.yaml
tests/test_data/openephys/008_2022-12-08_17-01-48_1/: settings.xml
tests/test_data/openephys/008_2022-12-08_17-01-48_1/experiment1/recording1/: sync_messages.txt
tests/test_data/openephys/008_2022-12-08_17-01-48_1/experiment1/recording1/continuous/Rhythm_FPGA-100.0/: timestamps.npy
tests/test_data/openephys/008_2022-12-08_17-01-48_1/experiment1/recording1/events/Rhythm_FPGA-100.0/TTL_1/: channel_states.npy  channels.npy  full_words.npy  timestamps.npy
tests/test_data/openephys/008_2022-12-08_17-01-48_1/experiment1/recording1/events/Tracking_Port-127.0/BINARY_group_1/: channels.npy  data_array.npy  metadata.npy  timestamps.npy
tests/test_data/openephys/008_2022-12-08_17-23-24_2/: settings.xml
tests/test_data/openephys/008_2022-12-08_17-23-24_2/experiment1/recording1/: sync_messages.txt
tests/test_data/openephys/008_2022-12-08_17-23-24_2/experiment1/recording1/continuous/Rhythm_FPGA-100.0/: timestamps.npy
(+71 files in other folders)
